# jni

./: .gitignore  CMakeLists.txt  README.md
code/: Demo.cpp  Demo.h  httpgmssl.cpp  httpgmssl.h  model.cpp  nocopyable.h  thread.cpp  thread.h  util.h
code/java/: Demo.java
script/: jni.sh  test.sh
tests/: test.cpp  test_thread.cpp
